objects/Feeding_Trial__c.object
<CustomObject>
    <description>Captures Feeding Trial data for Producer Accounts</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>All - Producer Account - this will autopopulate based on the Account the Feeding Trial is created from</description>
        <label>Producer Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Prospect Retail Producer Account, Prospect Direct Producer Account, Retail Producer Account, Direct Producer Account, Direct Producer Account., Prospect Direct Producer Account., Prospect Retail Producer Account., Retail Producer Account.</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Feeding Trials</relationshipLabel>
        <relationshipName>Feeding_Trials</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Approved_for_Database__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved for Database</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Area_Sales_Manager__c</fullName>
        <description>ASM of the Lead Purina Sales Person creating the Feeding Trial</description>
        <formula>TEXT(Lead_Purina_Sales_Person__r.Area_Sales_Manager__c )</formula>
        <label>Area Sales Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>As_Fed_Feed_Conversion__c</fullName>
        <description>Cattle - Total number of Lbs / Total Gained Lbs.</description>
        <formula>Total_Lbs_Fed_Formula__c/ Total_Gain_lbs__c</formula>
        <label>As Fed - Feed Conversion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Age_at_Birth_Weight__c</fullName>
        <description>Dairy - Average Birthweight Age of the Calves on the Feeding Trial</description>
        <formula>IF(Number_of_Calves_RU__c=0,NULL,(Sum_Age__c /  Number_of_Calves_RU__c))</formula>
        <label>Avg. Age at Birth Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Age_at_Weaning__c</fullName>
        <description>Dairy - Average age at weaning for calves</description>
        <formula>IF(Number_of_Calves_RU__c=0,NULL,(Sum_Age_at_Weaning__c / Number_of_Calves_RU__c))</formula>
        <label>Avg. Age at Weaning</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Birth_Height_in__c</fullName>
        <description>Dairy - Average Birth Height for Calves in Feeding Trial</description>
        <formula>IF(Number_of_Calves_RU__c=0,NULL,(Sum_Birth_Height__c /  Number_of_Calves_RU__c))</formula>
        <label>Avg. Birth Height (in)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Birth_Weight_lbs__c</fullName>
        <description>Dairy - Average Birth Weight for Calves in Feeding Trial</description>
        <formula>IF(Number_of_Calves_RU__c=0,NULL,(Sum_Birth_Weight_lbs__c  /  Number_of_Calves_RU__c))</formula>
        <label>Avg. Birth Weight (lbs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Consumption_BW__c</fullName>
        <description>Cattle - Avg. Consumption of Grain Mix, lbs - % BW</description>
        <formula>Avg_Consumption_of_Grain_Mix_lbs__c / (( End_Avg_Weight_lbs__c + Start_Avg_Weight_lbs__c )/2)</formula>
        <label>Avg. Consumption % BW</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Avg_Consumption_of_Grain_Mix_lbs__c</fullName>
        <description>Cattle - Grain Mix Consumed/Total Hd. Days</description>
        <formula>Grain_Mix_Consumed__c /  Total_HD_Days__c</formula>
        <label>Avg. Consumption of Grain Mix, lbs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Daily_Gain__c</fullName>
        <description>Dairy - Average Daily Gain for Calves in Feeding Trial</description>
        <formula>IF(Number_of_Calves_RU__c=0,NULL,(Sum_Average_Daily_Gain__c /  Number_of_Calves_RU__c))</formula>
        <label>Avg. Daily Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Daily_Gain_lbs__c</fullName>
        <description>Cattle - the average daily gain on the trial based the the Total Gain /   Total HD Days on the feed</description>
        <formula>Total_Gain_lbs__c  /   Total_HD_Days__c</formula>
        <label>Avg. Daily Gain (lbs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Days_on_Trial__c</fullName>
        <description>Dairy - Average number of days on trial for Calves</description>
        <formula>IF(Number_of_Calves_RU__c=0,NULL,(Sum_Days_Between_Measurements__c /  Number_of_Calves_RU__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg. Days on Trial</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_End_Height_in__c</fullName>
        <description>Dairy - Average ending height for calves in the feeding trial</description>
        <formula>IF(Number_of_Calves_RU__c=0,NULL,(Sum_End_Height__c /  Number_of_Calves_RU__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg. End Height (in)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_End_Weight_lbs__c</fullName>
        <description>Dairy - Average ending weight for all Calves on feeding trial</description>
        <formula>IF(Number_of_Calves_RU__c=0,NULL,(Sum_End_Weight__c /  Number_of_Calves_RU__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg. End Weight (lbs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Feed_HD_Day_lbs__c</fullName>
        <description>Cattle - Total Lbs Fed/Total # HD Days</description>
        <formula>Total_Lbs_Fed_Formula__c /  Total_HD_Days__c</formula>
        <label>Avg. Feed/HD/Day, lbs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Mineral_Consumption_oz_hd_d__c</fullName>
        <description>Cattle - if 90 Day Mineral Trial</description>
        <formula>(Total_Lbs_Fed__c / Total_HD_Days__c )*16</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg. Mineral Consumption, oz/hd/d</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Total_Gain_lbs__c</fullName>
        <description>Cattle - Avg. total gain for cattle during the feeding trial based on the Total Gain/the end number of head of cattle</description>
        <formula>Total_Gain_lbs__c / End_No_Head__c</formula>
        <label>Avg. Total Gain (lbs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Breed_Type__c</fullName>
        <description>Cattle - Breed Type for the Cattle Feeding Trial</description>
        <label>Breed Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English Cross</fullName>
                </value>
                <value>
                    <fullName>Cont. Cross</fullName>
                </value>
                <value>
                    <fullName>Eng X Cont.</fullName>
                </value>
                <value>
                    <fullName>Angus</fullName>
                </value>
                <value>
                    <fullName>Braford</fullName>
                </value>
                <value>
                    <fullName>Brahman</fullName>
                </value>
                <value>
                    <fullName>Brangus</fullName>
                </value>
                <value>
                    <fullName>Braunvieh</fullName>
                </value>
                <value>
                    <fullName>Charolais</fullName>
                </value>
                <value>
                    <fullName>Chianina</fullName>
                </value>
                <value>
                    <fullName>Gelbveih</fullName>
                </value>
                <value>
                    <fullName>Hereford</fullName>
                </value>
                <value>
                    <fullName>Holstein</fullName>
                </value>
                <value>
                    <fullName>Holstein X Beef</fullName>
                </value>
                <value>
                    <fullName>Limousin</fullName>
                </value>
                <value>
                    <fullName>Longhorn</fullName>
                </value>
                <value>
                    <fullName>Maine Anjou</fullName>
                </value>
                <value>
                    <fullName>Red Angus</fullName>
                </value>
                <value>
                    <fullName>Salers</fullName>
                </value>
                <value>
                    <fullName>S. Gertrudis</fullName>
                </value>
                <value>
                    <fullName>Shorthorn</fullName>
                </value>
                <value>
                    <fullName>Simmental</fullName>
                </value>
                <value>
                    <fullName>Tarentaise</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Mixed Breeds</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Breed_of_Horses__c</fullName>
        <description>Horse - Breed of Horse for Horse Feeding Trials</description>
        <label>Breed of Horses</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Breeding Stallion</fullName>
                </value>
                <value>
                    <fullName>Brood Mares</fullName>
                </value>
                <value>
                    <fullName>Foals</fullName>
                </value>
                <value>
                    <fullName>Show Performance</fullName>
                </value>
                <value>
                    <fullName>Weaning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cattle_Date_Removed1__c</fullName>
        <description>Cattle - Enter the date cattle were removed for any reason</description>
        <inlineHelpText>Enter the date cattle were removed for any reason</inlineHelpText>
        <label>1. Date Removed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cattle_Date_Removed2__c</fullName>
        <description>Cattle - Enter the date cattle were removed for any reason</description>
        <inlineHelpText>Cattle - Enter the date cattle were removed for any reason</inlineHelpText>
        <label>2. Date Removed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cattle_Date_Removed3__c</fullName>
        <description>Cattle - Enter the date cattle were removed for any reason</description>
        <inlineHelpText>Cattle - Enter the date cattle were removed for any reason</inlineHelpText>
        <label>3. Date Removed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cattle_Origin__c</fullName>
        <description>Cattle - Origin</description>
        <label>Cattle Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home Raised</fullName>
                </value>
                <value>
                    <fullName>Short Haul</fullName>
                </value>
                <value>
                    <fullName>Long Haul</fullName>
                </value>
                <value>
                    <fullName>Local/Salebarn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments_on_Costs__c</fullName>
        <description>Cattle - Comments on Costs for Feeding Trial</description>
        <label>Comments on Costs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitive_Product__c</fullName>
        <description>Deer - Competitive Product for the Feeding Trial</description>
        <label>Competitive Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corn_Cost_bu__c</fullName>
        <description>Cattle - Cost Cost, $/BU</description>
        <label>Corn Cost ($/bu)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <description>Created Date of the Feeding Trial - used for updated the name of the Feeding Trial</description>
        <formula>TEXT(MONTH(DATEVALUE(CreatedDate)))+&quot;/&quot; +TEXT(DAY(DATEVALUE(CreatedDate)))+&quot;/&quot; +TEXT(YEAR(DATEVALUE(CreatedDate)))</formula>
        <label>Created Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Amount_to_Dealer__c</fullName>
        <description>Cattle - If the Product Proof is 90 Day Mineral Trial, Take the total amount of Lbs. Fed/2000 * 80</description>
        <formula>IF(ISPICKVAL(Proof_Type__c, &apos;90 D Mineral Trial&apos;),( Total_Lbs_Fed__c /2000)*80,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Amount to Dealer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DM_Feed_Conversion__c</fullName>
        <description>Cattle - Enter DM Feed Conversion if known.</description>
        <inlineHelpText>Enter DM Feed Conversion if known.</inlineHelpText>
        <label>DM - Feed Conversion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Removed_Calc1__c</fullName>
        <description>Cattle - If there is a date for cattle being removed, cattle removed date - feeding trial start date</description>
        <formula>IF(Cattle_Date_Removed1__c=NULL,0 ,(Cattle_Date_Removed1__c -  Start_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Removed Calc1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Removed_Calc2__c</fullName>
        <description>Cattle - If there is a date for cattle being removed, cattle removed date - feeding trial start date</description>
        <formula>IF(Cattle_Date_Removed2__c=NULL,0 ,(Cattle_Date_Removed2__c -  Start_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Removed Calc2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Removed_Calc3__c</fullName>
        <description>Cattle - If there is a date for cattle being removed, cattle removed date - feeding trial start date</description>
        <formula>IF(Cattle_Date_Removed3__c=NULL,0 ,(Cattle_Date_Removed3__c -  Start_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Removed Calc3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_on_Feed__c</fullName>
        <description>Cattle - number of days on the feed</description>
        <formula>End_Date__c - Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days on Feed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discipline_Activity__c</fullName>
        <description>Horse - Discipline/Activity for Horses in Feeding Trial</description>
        <label>Discipline/Activity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Boarding</fullName>
                </value>
                <value>
                    <fullName>Breeding</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Pleasure</fullName>
                </value>
                <value>
                    <fullName>Race</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Avg_BCS__c</fullName>
        <description>Cattle - Enter Ending Avg. Cow BCS in this field if the Program Type is &quot;Brood Cows&quot;</description>
        <inlineHelpText>Enter Ending Avg. Cow BCS in this field if the Program Type is &quot;Brood Cows&quot;</inlineHelpText>
        <label>End Avg. BCS</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Avg_Weight_lbs__c</fullName>
        <description>Cattle - End total weight / End number of head</description>
        <formula>End_Total_Weight_lbs__c / End_No_Head__c</formula>
        <label>End Avg. Weight (lbs)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date_Removed_Calc__c</fullName>
        <description>Cattle - Number of Days for trial. Used in the Hd. Days</description>
        <formula>End_Date__c -  Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date Removed Calc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>ALL - End Date of the Feeding Trial</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_No_Head__c</fullName>
        <description>Cattle - Number of head at the end of the Feeding Trial</description>
        <label>End No. Head</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Number_Hd__c</fullName>
        <description>Cattle - End amount of Head - based on &apos;End # Head&apos; formula on HD Days tab. Used to display in the Hd. Removed Section</description>
        <formula>End_No_Head__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End # Hd.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Number_Head_Calc__c</fullName>
        <description>Cattle - End # Head (formula) * End Date Removed Calc</description>
        <formula>End_Date_Removed_Calc__c *   End_Number_Hd__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End # Head Calc.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Total_Weight_lbs__c</fullName>
        <description>Cattle - Total weight at the end of the Feeding Trial</description>
        <label>End Total Weight (lbs)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Avg_Ending_Weight__c</fullName>
        <description>Cattle - 90 Day Feeding Trial - End No. Head/Estimated Ending Weight</description>
        <formula>Est_Ending_Weight__c/End_No_Head__c</formula>
        <label>Est. Avg. Ending Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Avg_Starting_Weight__c</fullName>
        <description>Cattle - 90 Day Feeding Trial - Starting No. Head/Estimated Avg. Starting Weight</description>
        <formula>Est_Starting_Weight__c /  Start_No_Head__c</formula>
        <label>Est. Avg. Starting Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Ending_Weight__c</fullName>
        <description>Cattle - 90 Day Trial - Estimated Ending Weight</description>
        <label>Est. Ending Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Starting_Weight__c</fullName>
        <description>Cattle - 90 Day Trial - Estimated Starting Weight</description>
        <label>Est. Starting Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feed_Additives__c</fullName>
        <description>Cattle - Feed additives included for Cattle feeding trial</description>
        <label>Feed Additives</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rumensin</fullName>
                </value>
                <value>
                    <fullName>Bovatec</fullName>
                </value>
                <value>
                    <fullName>Cattlyst</fullName>
                </value>
                <value>
                    <fullName>GainPro</fullName>
                </value>
                <value>
                    <fullName>Deccox</fullName>
                </value>
                <value>
                    <fullName>CTC</fullName>
                </value>
                <value>
                    <fullName>Aureo</fullName>
                </value>
                <value>
                    <fullName>AS 700</fullName>
                </value>
                <value>
                    <fullName>Rum/Tyl</fullName>
                </value>
                <value>
                    <fullName>Rum/Tyl/MGA</fullName>
                </value>
                <value>
                    <fullName>Rum/Deccox</fullName>
                </value>
                <value>
                    <fullName>Bov/MGA</fullName>
                </value>
                <value>
                    <fullName>Bov/Aureo</fullName>
                </value>
                <value>
                    <fullName>Bov/CTC</fullName>
                </value>
                <value>
                    <fullName>Cat/Aureo</fullName>
                </value>
                <value>
                    <fullName>CTC/Deccox</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feed_Cost_of_Gain__c</fullName>
        <description>Cattle - Total feed cost/total gain lb * 100</description>
        <formula>(Total_Feed_Cost_Formula__c / Total_Gain_lbs__c )*100</formula>
        <label>Feed Cost of Gain ($/cwt)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Feeder_Type__c</fullName>
        <description>Cattle - Feeder Type used for Cattle Trial</description>
        <label>Feeder Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Self Feeder</fullName>
                </value>
                <value>
                    <fullName>Bunk Fed</fullName>
                </value>
                <value>
                    <fullName>On Ground</fullName>
                </value>
                <value>
                    <fullName>Lick Tank/Wheel</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feeding_Trial_Auto_Number__c</fullName>
        <description>Auto-number for the Feeding Trial for the naming of the Feeding Trial</description>
        <displayFormat>{0000000}</displayFormat>
        <label>Feeding Trial Auto-Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Feeding_Trial_Count__c</fullName>
        <formula>IF(ISBLANK(X18_Digit_Feeding_Trial_ID__c) ,0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Feeding Trial Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feeding_Trial_Status__c</fullName>
        <description>Cattle - Status for the Cattle Feeding Trial (some values populated via workflow field update with the approval process)</description>
        <label>Feeding Trial Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Feeding Trial Active</fullName>
                    <default>true</default>
                    <label>Feeding Trial Active</label>
                </value>
                <value>
                    <fullName>Feeding Trial Complete - Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Feeding Trial Complete - Approved</fullName>
                </value>
                <value>
                    <fullName>Feeding Trial Complete - Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Forage_CP__c</fullName>
        <description>Cattle - Forage CP</description>
        <label>Forage CP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&lt; 8% CP</fullName>
                </value>
                <value>
                    <fullName>8% - 14% CP</fullName>
                </value>
                <value>
                    <fullName>&gt; 14% CP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Forage_Type__c</fullName>
        <description>Cattle - Forage Type</description>
        <label>Forage Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alfalfa Hay</fullName>
                </value>
                <value>
                    <fullName>Brome Hay</fullName>
                </value>
                <value>
                    <fullName>Cornstalks</fullName>
                </value>
                <value>
                    <fullName>Fescue Hay</fullName>
                </value>
                <value>
                    <fullName>Meadow Hay</fullName>
                </value>
                <value>
                    <fullName>Oat Straw</fullName>
                </value>
                <value>
                    <fullName>Orchardgrass Hay</fullName>
                </value>
                <value>
                    <fullName>Prairie Hay</fullName>
                </value>
                <value>
                    <fullName>Sudan Hay</fullName>
                </value>
                <value>
                    <fullName>Millet Hay</fullName>
                </value>
                <value>
                    <fullName>Timothy Hay</fullName>
                </value>
                <value>
                    <fullName>Wheat Grass Hay</fullName>
                </value>
                <value>
                    <fullName>Wheat Straw</fullName>
                </value>
                <value>
                    <fullName>Alfalfa/Grass Hay Mix</fullName>
                </value>
                <value>
                    <fullName>Corn Silage</fullName>
                </value>
                <value>
                    <fullName>Alfalfa Silage</fullName>
                </value>
                <value>
                    <fullName>Grass Silage</fullName>
                </value>
                <value>
                    <fullName>Sorghum Silage</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pasture</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Free_Bags__c</fullName>
        <description>Deer - Free Bags to be given for the feeding trial</description>
        <label>Free Bags</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Free_Tons__c</fullName>
        <description>Deer - Free tons for the Feeding Trial</description>
        <label>Free Tons</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>General_Comments__c</fullName>
        <description>Cattle - General Comments for Cattle Feeding Trial</description>
        <label>General Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Grain_Mix_Consumed__c</fullName>
        <description>Cattle - Enter the Total Amount of concentrate fed.  Everything but forage products such as hays and corn silage should be part of Concentrate Fed.</description>
        <inlineHelpText>Enter the Total Amount of concentrate fed.  Everything but forage products such as hays and corn silage should be part of Concentrate Fed.</inlineHelpText>
        <label>Grain Mix Consumed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hd_Died_due_to_Bloat__c</fullName>
        <description>Cattle - # Hd Died due to: Bloat</description>
        <label># Hd Died due to: Bloat</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hd_Died_due_to_Digestive__c</fullName>
        <description>Cattle - # Hd Died due to: Digestive</description>
        <label># Hd Died due to: Digestive</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hd_Died_due_to_Foot_Rot__c</fullName>
        <description>Cattle - # Hd Died due to: Foot Rot</description>
        <label># Hd Died due to: Foot Rot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hd_Died_due_to_Injury__c</fullName>
        <description>Cattle - # Hd Died due to: Injury</description>
        <label># Hd Died due to: Injury</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hd_Died_due_to_Other__c</fullName>
        <description>Cattle - # Hd Died due to: Other</description>
        <label># Hd Died due to: Other</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hd_Died_due_to_Respiratory__c</fullName>
        <description>Cattle - # Hd Died due to: Respiratory</description>
        <label># Hd Died due to: Respiratory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hd_Treated_for_Bloat__c</fullName>
        <description>Cattle - # Hd Treated for: Bloat</description>
        <label># Hd Treated for: Bloat</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hd_Treated_for_Digestive__c</fullName>
        <description>Cattle - # Hd Treated for: Digestive</description>
        <label># Hd Treated for: Digestive</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hd_Treated_for_Foot_Rot__c</fullName>
        <description>Cattle - # Hd Treated for: Foot Rot</description>
        <label># Hd Treated for: Foot Rot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hd_Treated_for_Injury__c</fullName>
        <description>Cattle - # Hd Treated for: Injury</description>
        <label># Hd Treated for: Injury</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hd_Treated_for_Other__c</fullName>
        <description>Cattle - # Hd Treated for: Other</description>
        <label># Hd Treated for: Other</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hd_Treated_for_Respiratory__c</fullName>
        <description>Cattle - # Hd Treated for: Respiratory</description>
        <label># Hd Treated for: Respiratory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>